--- a/public/css/index/mobile_style.css
+++ b/public/css/index/mobile_style.css
@@ -45,8 +45,8 @@ html {
   margin-bottom: auto;
 }
 .playnow {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(70%, transparent), to(black)), url(assets/main-bg.jpg);
-  background-image: linear-gradient(to bottom, transparent 70%, black 100%), url(assets/main-bg.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(70%, transparent), to(black)), url(/images/index/main-bg.jpg);
+  background-image: linear-gradient(to bottom, transparent 70%, black 100%), url(/images/index/main-bg.jpg);
 }
 .playnow .container h1 {
   margin-top: 25vh;
@@ -124,8 +124,8 @@ html {
   }
 }
 .gameoption {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(10%, transparent), color-stop(90%, transparent), to(black)), url(assets/the-games-bg.jpg);
-  background-image: linear-gradient(black 0%, transparent 10%, transparent 90%, black 100%), url(assets/the-games-bg.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(10%, transparent), color-stop(90%, transparent), to(black)), url(/images/index/the-games-bg.jpg);
+  background-image: linear-gradient(black 0%, transparent 10%, transparent 90%, black 100%), url(/images/index/the-games-bg.jpg);
 }
 .gameoption .container {
   text-align: left;
@@ -165,8 +165,8 @@ html {
   background-image: url('data:image/svg+xml, <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-caret-right" fill="white" xmlns="http://www.w3.org/2000/svg"> <path fill-rule="evenodd" d="M6 12.796L11.481 8 6 3.204v9.592zm.659.753l5.48-4.796a1 1 0 0 0 0-1.506L6.66 2.451C6.011 1.885 5 2.345 5 3.204v9.592a1 1 0 0 0 1.659.753z"/> </svg>');
 }
 .features {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(50%, transparent), to(black)), url(assets/features.jpg);
-  background-image: linear-gradient(black 0%, transparent 50%, black 100%), url(assets/features.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(50%, transparent), to(black)), url(/images/index/features.jpg);
+  background-image: linear-gradient(black 0%, transparent 50%, black 100%), url(/images/index/features.jpg);
   background-position: left;
 }
 .features .col-md-6 {
@@ -250,8 +250,8 @@ html {
   height: 150%;
 }
 .sysreq {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(50%, transparent), to(black)), url(assets/requirements.png);
-  background-image: linear-gradient(black 0%, transparent 50%, black 100%), url(assets/requirements.png);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(50%, transparent), to(black)), url(/images/index/requirements.png);
+  background-image: linear-gradient(black 0%, transparent 50%, black 100%), url(/images/index/requirements.png);
   padding: 10vh 0px;
 }
 .sysreq h5 {
@@ -278,8 +278,8 @@ html {
   text-align: left;
 }
 .topscores {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(50%, rgba(0, 0, 0, 0.8)), to(black)), url(assets/top-score-bg.png);
-  background-image: linear-gradient(black 0%, rgba(0, 0, 0, 0.8) 50%, black 100%), url(assets/top-score-bg.png);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(50%, rgba(0, 0, 0, 0.8)), to(black)), url(/images/index/top-score-bg.png);
+  background-image: linear-gradient(black 0%, rgba(0, 0, 0, 0.8) 50%, black 100%), url(/images/index/top-score-bg.png);
 }
 .topscores .topscoresleft {
   margin-bottom: 2vh;
@@ -346,8 +346,8 @@ html {
   color: grey;
 }
 .newsletter {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(10%, transparent), color-stop(90%, transparent), to(black)), url(assets/newsletter-bg.jpg);
-  background-image: linear-gradient(black 0%, transparent 10%, transparent 90%, black 100%), url(assets/newsletter-bg.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(10%, transparent), color-stop(90%, transparent), to(black)), url(/images/index/newsletter-bg.jpg);
+  background-image: linear-gradient(black 0%, transparent 10%, transparent 90%, black 100%), url(/images/index/newsletter-bg.jpg);
   text-align: left;
 }
 .newsletter h3 {
