--- a/views/rockpaperscissor.ejs
+++ b/views/rockpaperscissor.ejs
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-	<link rel="stylesheet" href="game_style.css">
+	<link rel="stylesheet" href="/css/rockpaperscissor/game_style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" />
-	<link rel="icon" href="../ChallengeCh3/assets/game-controller.svg" type="image/svg+xml" />
-	<title>Game | Rock Paper Scissors</title>
+	<link rel="icon" href="/images/index/game-controller.svg" type="image/svg+xml" />
+	<title>Game | <%= title %></title>
 </head>
 <body>
 	<div class="align-items-center customHeader" id="header">
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-lg-7 my-2">
 					<div class="d-inline-block mr-3">
-						<a href="#">
+						<a href="/">
 							<svg width="40px" height="40px" viewBox="0 0 16 16" class="bi bi-chevron-left" fill="rgb(114,76,33)"
 								xmlns="http://www.w3.org/2000/svg">
 								<path fill-rule="evenodd"
@@ -26,7 +26,7 @@
 					</div>
 					<a href="#">
 						<div class="d-inline-block mr-3">
-							<img src="assets/logo.png" width="40px" height="40px" class="" alt="logo">
+							<img src="/images/rockpaperscissor/logo.png" width="40px" height="40px" class="" alt="logo">
 						</div>
 					</a>
 					<a href="#">
@@ -50,15 +50,15 @@
 			</div>
 			<div class="row contentImage">
 				<div class="col-4 col-sm-3 offset-sm-1 d-flex">
-					<div class="m-auto greyBox playerImage px-4 py-3"><img src="assets/10_batu.png" class="player rock"></div>
+					<div class="m-auto greyBox playerImage px-4 py-3"><img src="/images/rockpaperscissor/10_batu.png" class="player rock"></div>
 				</div>
 				<div class="col-4 col-sm-3 offset-2 offset-sm-4 d-flex">
-					<div class="m-auto greyBox compImage px-4 py-3"><img src="assets/10_batu.png" class="compRock"></div>
+					<div class="m-auto greyBox compImage px-4 py-3"><img src="/images/rockpaperscissor/10_batu.png" class="compRock"></div>
 				</div>
 			</div>
 			<div class="row align-items-center contentImage">
 				<div class="col-4 col-sm-3 offset-sm-1 d-flex">
-					<div class="m-auto greyBox playerImage px-4 py-3"><img src="assets/10_kertas.png" class="player paper"></div>
+					<div class="m-auto greyBox playerImage px-4 py-3"><img src="/images/rockpaperscissor/10_kertas.png" class="player paper"></div>
 				</div>
 				<div class="col-2 col-sm-2 offset-sm-1 d-flex p-0 versus">
 					<div class="m-auto p-0">
@@ -69,27 +69,27 @@
 					</div>
 				</div>
 				<div class="col-4 col-sm-3 offset-sm-1 d-flex">
-					<div class="m-auto greyBox compImage px-4 py-3"><img src="assets/10_kertas.png" class="compPaper"></div>
+					<div class="m-auto greyBox compImage px-4 py-3"><img src="/images/rockpaperscissor/10_kertas.png" class="compPaper"></div>
 				</div>
 			</div>
 			<div class="row contentImage">
 				<div class="col-4 col-sm-3 offset-sm-1 d-flex">
-					<div class="m-auto greyBox playerImage px-4 py-3"><img src="assets/10_gunting.png" class="player scissor">
+					<div class="m-auto greyBox playerImage px-4 py-3"><img src="/images/rockpaperscissor/10_gunting.png" class="player scissor">
 					</div>
 				</div>
 				<div class="col-4 col-sm-3 offset-2 offset-sm-4 d-flex">
-					<div class="m-auto greyBox compImage px-4 py-3"><img src="assets/10_gunting.png" class="compScissor"></div>
+					<div class="m-auto greyBox compImage px-4 py-3"><img src="/images/rockpaperscissor/10_gunting.png" class="compScissor"></div>
 				</div>
 			</div>
 			<div class="row my-2">
 				<div class="col-2 col-sm-2 offset-4 offset-sm-5 d-flex p-0">
-					<div class="m-auto p-0 reset"><img src="assets/10_refresh.png" class="refresh"></div>
+					<div class="m-auto p-0 reset"><img src="/images/rockpaperscissor/10_refresh.png" class="refresh"></div>
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
-<script src="rockpaperscissors.js"></script>
+<script src="/js/rockpaperscissor/rockpaperscissor.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
