--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,57 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0 , shrink-to-fit=no" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="author" content="Alvin Laurent Ertanto" />
-  <meta name="keywords" content="game, traditional game, dx11, play" />
-  <meta name="description"
-    content="Experience new traditional gameplay! We provide various nostalgic traditional games here for everyone who miss their childhood. Play now for free and enjoy." />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <%- include('./partials/head.ejs') %> 
   <link rel="stylesheet" href="/css/index/mobile_style.css" />
   <link rel="stylesheet" href="/css/index/desktop_style.css" />
   <link rel="stylesheet" href="/css/index/tablet_style.css" />
   <link rel="stylesheet" href="/css/index/smphone_style.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" />
-  <link rel="icon" href="/images/index/game-controller.svg" type="image/svg+xml" />
-  <title>Play Traditional Game | <%= title %></title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light w-100 customnavbar">
-    <div class="container mr-auto">
-      <a class="navbar-brand mr-5" href="/">Logo</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto navbar-center">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#featurescontent">Work</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#newslettercontent">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#navigation">About Me</a>
-          </li>
-        </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <%- include('./partials/navbar.ejs') %>
   <div class="jumbotron jumbotron-fluid playnow" id="playnowcontent">
     <div class="container">
       <h1>Play traditional game</h1>
@@ -292,7 +249,7 @@
               <p>Your email address</p>
             </div>
             <div class="col-md-5 text-left">
-              <button class="btn btn-warning mb-3 w-100">
+              <button type="submit" class="btn btn-warning mb-3 w-100">
                 Subscribe Now
               </button>
             </div>
@@ -339,27 +296,9 @@
         </div>
       </div>
       <hr />
-      <div class="row content-justify-end footer">
-        <div class="col-lg-4">
-          <div class="d-inline">
-            <p>&copy 2018 Your Games, inc. All Rights Reserved</p>
-          </div>
-        </div>
-        <div class="col-lg-6 offset-lg-2 mb-2">
-          <div class="d-inline">
-            <a href="#"><span>Privacy Policy </span></a>|
-            <a href="#"><span>Terms of Services </span></a>|
-            <a href="#"><span>Code of Conduct</span></a>
-          </div>
-        </div>
-      </div>
+      <%- include('./partials/footer.ejs') %>
     </div>
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<%- include('./partials/bootstrapScripts.ejs') %>
 </html>
