--- a/public/css/rockpaperscissor/game_history.css
+++ b/public/css/rockpaperscissor/game_history.css
@@ -2,6 +2,7 @@ body, html {
 	scroll-behavior: smooth;
 	text-decoration: none !important;
 	font-family: "Open Sans", sans-serif;
+	background-color: #9c835f;
 }
 .customHeader div .d-inline-block {
 	line-height: 2;
@@ -13,19 +14,21 @@ body, html {
 	color: #ffc107;
 }
 .bgColor {
-	height: 100%;
 	position: absolute;
 	z-index: -1;
 	top: 0;
-	background-color: #9c835f;
 }
 .historyContent {
   position: relative;
 	top: 100px;
 	text-align: center !important;
 }
-.historyContent table span.delete {
-  cursor: pointer;
+.historyContent table td {
+	padding: 0;
+}
+.historyContent table button {
+	background-color: transparent !important;
+	border: 0;
 }
 @media (min-width: 576px) and (max-width: 768px) {
 	.customHeader a .headerTitle {
