--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,6 +17,11 @@ html {
   background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(10%, transparent), color-stop(90%, transparent), to(black)), url(/images/index/newsletter-bg.jpg);
   background-image: linear-gradient(black 0%, transparent 10%, transparent 90%, black 100%), url(/images/index/newsletter-bg.jpg);
 }
+.loginForm .errorLog {
+  background-color: red;
+  opacity: 0.5;
+  color: black;
+}
 .footer p {
   font-size: 14px;
   color: grey;
