--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -20,6 +20,7 @@
           <a class="nav-link" href="#navigation">About Me</a>
         </li>
       </ul>
+      <% if(!login) { %>
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="/auth/signup">Sign Up</a>
@@ -28,6 +29,19 @@
           <a class="nav-link" href="/auth/login">Login</a>
         </li>
       </ul>
+      <% } %>
+      <% if (login) { %>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/profile">Signed In as <%= username %></a>
+        </li>
+        <li class="nav-item">
+          <form method="POST" action="/auth/logout">
+            <button type="submit" class="btn btn-warning signupSubmit" id="signupSubmit">LOG OUT</button>
+          </form>
+        </li>
+      </ul>
+      <% } %>
     </div>
   </div>
 </nav>
