--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -36,7 +36,10 @@
               <input type="password" class="form-control" id="repeatPassword" name="repeatPassword"
                 placeholder="Enter your password again" required>
             </div>
-            <button type="submit" class="btn btn-warning signupSubmit" id="signupSubmit">SIGN UP</button>
+            <button type="submit" class="btn btn-warning signupSubmit" id="signupSubmit">REGISTER</button>
+            <a href="/auth/login">
+              <button type="button" class="btn btn-warning login" id="login">LOGIN</button>
+            </a>
           </form>
         </div>
       </div>
