edit profile (validation + update db)

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="container">
       <h1>Play traditional game</h1>
       <h2>Experience new traditional game play</h2>
-      <a href="#" class="btn btn-warning">Play now</a>
+      <a href="/rockpaperscissor" class="btn btn-warning">Play now</a>
     </div>
     <div class="container-fluid to-gameoption">
       <h3>The story</h3>
