--- a/server/views/changePassword.ejs
+++ b/server/views/changePassword.ejs
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
   <%- include('./partials/head.ejs') %>
-  <link rel="stylesheet" href="/css/index/mobile_style.css" />
-  <link rel="stylesheet" href="/css/index/desktop_style.css" />
-  <link rel="stylesheet" href="/css/index/tablet_style.css" />
-  <link rel="stylesheet" href="/css/index/smphone_style.css" />
   <link rel="stylesheet" href="/css/profile.css" />
 </head>
 <body>
@@ -28,7 +24,8 @@
             <div class="form-group row">
               <label for="oldPassword" class="col-md-3 col-form-label">Old Password</label>
               <div class="col-md-6">
-                <input type="password" class="form-control" id="oldPassword" name="oldPassword" placeholder="Old Password">
+                <input type="password" class="form-control" id="oldPassword" name="oldPassword"
+                  placeholder="Old Password">
               </div>
             </div>
             <div class="form-group row">
@@ -40,10 +37,12 @@
             <div class="form-group row">
               <label for="repeatPassword" class="col-md-3 col-form-label">Re-type New Password</label>
               <div class="col-md-6">
-                <input type="password" class="form-control" id="repeatPassword" name="repeatPassword" placeholder="Re-type New Password">
+                <input type="password" class="form-control" id="repeatPassword" name="repeatPassword"
+                  placeholder="Re-type New Password">
               </div>
             </div>
-            <button type="submit" class="btn btn-success editProfileSubmit" id="editProfileSubmit"><strong>ENTER</strong></button>
+            <button type="submit" class="btn btn-success editProfileSubmit"
+              id="editProfileSubmit"><strong>ENTER</strong></button>
           </form>
         </div>
       </div>
@@ -52,6 +51,6 @@
   <%- include('./partials/navigation.ejs') %>
   <%- include('./partials/footer.ejs') %>
   </div>
+  <%- include('./partials/bootstrapScripts.ejs') %>
 </body>
-<%- include('./partials/bootstrapScripts.ejs') %>
 </html>
