--- a/server/views/editProfile.ejs
+++ b/server/views/editProfile.ejs
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
   <%- include('./partials/head.ejs') %>
-  <link rel="stylesheet" href="/css/index/mobile_style.css" />
-  <link rel="stylesheet" href="/css/index/desktop_style.css" />
-  <link rel="stylesheet" href="/css/index/tablet_style.css" />
-  <link rel="stylesheet" href="/css/index/smphone_style.css" />
   <link rel="stylesheet" href="/css/profile.css" />
 </head>
 <body>
@@ -68,7 +64,8 @@
                 <input type="text" class="form-control" id="status" name="status" placeholder="Status">
               </div>
             </div>
-            <button type="submit" class="btn btn-success editProfileSubmit" id="editProfileSubmit"><strong>SUBMIT</strong></button>
+            <button type="submit" class="btn btn-success editProfileSubmit"
+              id="editProfileSubmit"><strong>SUBMIT</strong></button>
           </form>
         </div>
       </div>
@@ -77,6 +74,6 @@
   <%- include('./partials/navigation.ejs') %>
   <%- include('./partials/footer.ejs') %>
   </div>
+  <%- include('./partials/bootstrapScripts.ejs') %>
 </body>
-<%- include('./partials/bootstrapScripts.ejs') %>
 </html>
