--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -5,9 +5,9 @@
 <meta name="keywords" content="game, traditional game, dx11, play" />
 <meta name="description"
   content="Experience new traditional gameplay! We provide various nostalgic traditional games here for everyone who miss their childhood. Play now for free and enjoy." />
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/navbar.css" />
+<link rel="stylesheet" href='/css/navigation.css' />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap" />
 <link rel="icon" href="/images/index/game-controller.svg" type="image/svg+xml" />
 <title>Play Traditional Game | <%= title %></title>
