[KI] restructure MCR MVC game

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="container">
       <h1>Play traditional game</h1>
       <h2>Experience new traditional game play</h2>
-      <a href="/rockpaperscissor" class="btn btn-warning">Play now</a>
+      <a href="/game" class="btn btn-warning">Play now</a>
     </div>
     <div class="container-fluid to-gameoption">
       <h3>The story</h3>
@@ -46,7 +46,7 @@
             </ul>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <a href="/rockpaperscissor">
+                <a href="/game">
                   <img class="d-block w-75" src="/images/index/rockpaperstrategy-1600.jpg" alt="First slide" />
                 </a>
               </div>
