--- a/server/views/room.ejs
+++ b/server/views/room.ejs
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<%- include('./partials/gameHead.ejs') %>
-	<link rel="stylesheet" href="/css/rockpaperscissor/room.css">
+    <%- include('./partials/head.ejs') %>
+    <link rel="stylesheet" href="/css/rockpaperscissor/room.css" />
 </head>
 <title>Rock Paper Scissors</title>
-</head>
 <body class="container">
     <header class="d-flex flex-row align-items-center">
         <div class="p-2">
-            <a href="home.html">
+            <a href="room.html">
                 <svg width="40px" height="40px" viewBox="0 0 16 16" class="bi bi-chevron-left" fill="rgb(114,76,33)"xmlns="http://www.w3.org/2000/svg">
 					<path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
 				</svg>
@@ -25,21 +24,33 @@
     <main class="container mt-1">
         <div class="d-flex flex-row justify-content-center align-items-center">
             <div class="p-2">
-                <div class="text-center">
-                    <div class="player-choice grey-box p-3 my-3 text-center"></div>
-                    <form>
-                        <div class="form-group">
-                          <label for="exampleInputEmail1">Enter room name</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div class="row">
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body card">
+                          <h5 class="card-title">Join Room</h5>
+                          <form>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Enter room name</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <div class="form-group ">
+                            </div>
+                          </form>
+                          <a href="#" class="btn btn-warning">Join</a>
                         </div>
-                        <div class="form-group ">
-                          <a href="rockpaperscissor.ejs">Have no Join Code</a>
+                      </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Create Room</h5>
+                          <p class="card-text">Create new room if you dont have a room</p>
+                          <a href="#" class="btn btn-warning">Create Room</a>
                         </div>
-                        <a href="joinRoom.html">
-                            <button type="button" class="btn btn-warning">JOIN</button>
-                          </a>
-                      </form>
-                </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
     </main>
 	<%- include('./partials/bootstrapScripts.ejs') %>
