--- a/server/views/profile.ejs
+++ b/server/views/profile.ejs
@@ -14,31 +14,31 @@
           <table class="table table-dark table-bordered">
             <tr>
               <td scope="col">User ID</td>
-              <td scope="col"><%= user.userGame.userId %></td>
+              <td scope="col"><%= data.userGame.userId %></td>
             </tr>
             <tr>
               <td scope="col">Username</td>
-              <td scope="col"><%= user.userGame.username %></td>
+              <td scope="col"><%= data.userGame.username %></td>
             </tr>
             <tr>
               <td scope="col">Email</td>
-              <td scope="col"><%= user.userGame.email %></td>
+              <td scope="col"><%= data.userGame.email %></td>
             </tr>
             <tr>
               <td scope="col">Name</td>
-              <td scope="col"><%= user.name %></td>
+              <td scope="col"><%= data.name %></td>
             </tr>
             <tr>
               <td scope="col">Gender</td>
-              <td scope="col"><%= user.gender %></td>
+              <td scope="col"><%= data.gender %></td>
             </tr>
             <tr>
               <td scope="col">Birthday</td>
-              <td scope="col"><%= user.dob %></td>
+              <td scope="col"><%= data.dob %></td>
             </tr>
             <tr>
               <td scope="col">Status</td>
-              <td scope="col"><%= user.status %></td>
+              <td scope="col"><%= data.status %></td>
             </tr>
           </table>
           <a href="/profile/edit" class="d-inline-block">
