--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -22,6 +22,9 @@ html {
   opacity: 0.5;
   color: black;
 }
+.signupForm label{
+  font-size: 24px;
+}
 .footer p {
   font-size: 14px;
   color: grey;
