--- a/public/css/rockpaperscissor/room.css
+++ b/public/css/rockpaperscissor/room.css
@@ -21,5 +21,15 @@ body, html {
 	background-color: #9c835f;
 }
 .room .card {
-    background-color: bisque;
+  background-color: bisque;
+}
+.room .card .card-title {
+	font-size: 40px;
+	font-weight: bold;
+}
+#showRoomCode {
+	font-size: 20px;
+}
+#showRoomCode span {
+	font-size: 26px;
 }
