--- a/public/css/rockpaperscissor/room.css
+++ b/public/css/rockpaperscissor/room.css
@@ -3,6 +3,7 @@ body, html {
 	text-decoration: none !important;
 	font-family: "Open Sans", sans-serif;
 	background-color: #9c835f;
+	width: 100%;
 }
 .customHeader div .d-inline-block {
 	line-height: 2;
@@ -13,12 +14,8 @@ body, html {
 	text-transform: uppercase;
 	color: #ffc107;
 }
-.bgColor {
-	height: 100%;
-	position: absolute;
-	z-index: -1;
-	top: 0;
-	background-color: #9c835f;
+.room .topCards .card {
+	height: 30vh;
 }
 .room .card {
   background-color: bisque;
@@ -26,6 +23,10 @@ body, html {
 .room .card .card-title {
 	font-size: 40px;
 	font-weight: bold;
+	text-align: center;
+}
+.room .card button {
+	width: 100%;
 }
 #showRoomCode {
 	font-size: 20px;
