--- a/public/css/game/game_history.css
+++ b/public/css/game/game_history.css
@@ -4,13 +4,17 @@ body, html {
 	font-family: "Open Sans", sans-serif;
 	background-color: #9c835f;
 }
+a {
+  text-decoration: none!important;
+}
 .customHeader div .d-inline-block {
 	line-height: 2;
 }
-.customHeader a .headerTitle{
-	font-size: 16px;
+.customHeader .headerTitle{
+	font-size: 30px;
 	font-weight: bold;
 	color: #ffc107;
+	cursor: context-menu;
 }
 .bgColor {
 	position: absolute;
