--- a/server/views/game_history.ejs
+++ b/server/views/game_history.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <%- include('./partials/gameHead.ejs') %>
-  <link rel="stylesheet" href="/css/rockpaperscissor/game_history.css">
+  <link rel="stylesheet" href="/css/game/game_history.css">
 </head>
 <body>
   <div class="align-items-center customHeader" id="header">
@@ -23,11 +23,9 @@
               <img src="/images/rockpaperscissor/logo.png" width="40px" height="40px" class="" alt="logo">
             </div>
           </a>
-          <a href="#">
             <div class="d-inline-block mx-auto align-middle headerTitle">
               GAME HISTORY OF <%= username %>
             </div>
-          </a>
         </div>
       </div>
     </div>
